<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSCI571Homework</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Address">Street Address</string>
    <string name="City">City</string>

    <string-array name="State">
        <item name=""></item>
        <item name="AK">AK</item>
        <item name="AL">AL</item>
        <item name="AR">AR</item>
        <item name="AZ">AZ</item>
        <item name="CA">CA</item>
        <item name="CO">CO</item>
        <item name="CT">CT</item>
        <item name="DC">DC</item>
        <item name="DE">DE</item>
        <item name="FL">FL</item>
        <item name="GA">GA</item>
        <item name="HI">HI</item>
        <item name="IA">IA</item>
        <item name="ID">ID</item>
        <item name="IL">IL</item>
        <item name="IN">IN</item>
        <item name="KS">KS</item>
        <item name="KY">KY</item>
        <item name="LA">LA</item>
        <item name="MA">MA</item>
        <item name="MD">MD</item>
        <item name="ME">ME</item>
        <item name="MI">MI</item>
        <item name="MN">MN</item>
        <item name="MO">MO</item>
        <item name="MS">MS</item>
        <item name="MT">MT</item>
        <item name="NC">NC</item>
        <item name="ND">ND</item>
        <item name="NE">NE</item>
        <item name="NH">NH</item>
        <item name="NJ">NJ</item>
        <item name="NM">NM</item>
        <item name="NV">NV</item>
        <item name="NY">NY</item>
        <item name="OH">OH</item>
        <item name="OK">OK</item>
        <item name="OR">OR</item>
        <item name="PA">PA</item>
        <item name="RI">RI</item>
        <item name="SC">SC</item>
        <item name="SD">SD</item>
        <item name="TN">TN</item>
        <item name="TX">TX</item>
        <item name="UT">UT</item>
        <item name="VA">VA</item>
        <item name="VT">VT</item>
        <item name="WA">WA</item>
        <item name="WI">WI</item>
        <item name="WV">WV</item>
        <item name="WY">WY</item>
    </string-array>

    <string name="notice">This field is required</string>
    <string name="Statename">State</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_zillow_ouput">ZillowOuput</string>
    <string name="title_activity_zillow_output">ZillowOutput</string>
    <string name="title_section1">Basic Info</string>
    <string name="title_section2">Historical Zestimates</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_zillow_results">ZillowResults</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="h_zest">Historical Zestimates</string>
    <string name="basic_info">Basic Info</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_final">Final</string>
    <string name="title_activity_last">LastActivity</string>
    <string name="title_activity_">Act</string>
    <string name="section_label">label1</string>
    <string name="textView1">See more details on Zillow</string>
    <string name="textView5">Property Type</string>
    <string name="textView7">Lot Size</string>
    <string name="textView9">Finished Area</string>
    <string name="textView11">Bathrooms</string>
    <string name="textView13">Bedrooms</string>
    <string name="textView15">Tax Assessment Year</string>
    <string name="textView17">Tax Assessment</string>
    <string name="textView19">Last Sold Price</string>
    <string name="textView21">Last Sold Date</string>
    <string name="textView23">Zestimate  \u00AE Property Estimate as of </string>
    <string name="textView25">30 Days OverallChange</string>
    <string name="textView27">All Time Property Range</string>
    <string name="textView29">Rent Zestimate \u00AE Valuation as of </string>
    <string name="textView31">30 Days Rent Change</string>
    <string name="textView33">All Time Rent Range</string>
    <string name="title_activity_lets_do_this">Results from Zillow</string>
    <string name="title_activity_asf">Results from Zillow.com</string>
    <string name="title_activity_results_jav">Results From Zillow.com</string>
    <string name="title_FragmentTab1">Basic Info</string>
    <string name="title_FragmentTab2">Historical Zestimates</string>
    <string name="heading">Historical Zestimate for the past </string>
    <string name="facebook_app_id">337252859787269</string>
    <string name="title_activity_fbactivity">FBactivity</string>
    <string name="Verify">Please Verify your input</string>

</resources>
