<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/chicago"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.csci571homework.MainActivity" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Address"
             android:textStyle="bold"  />

       <EditText
           android:id="@+id/editText1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10" 
           android:inputType="text" 
           android:background="@drawable/rounded_edittext"
           />

       <TextView
            android:id="@+id/Text1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/notice"
           android:visibility="invisible" 
             android:textStyle="bold" 
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City"
              android:textStyle="bold"  />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/rounded_edittext" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:visibility="invisible"
              android:textStyle="bold"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Statename"
              android:textStyle="bold"  />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/State"
        android:background="@drawable/rounded_edittext"
       />
    
        <TextView
            android:id="@+id/Text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:visibility="invisible"
              android:textStyle="bold"  />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
             />

         <ImageView
             android:id="@+id/imageViewtr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:src="@drawable/loho" />

         <TextView
             android:id="@+id/Text4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Verify"
            
             android:textStyle="bold"
             android:visibility="invisible" />

            </LinearLayout>
