<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/firstone"
        >
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:visibility="visible"
       android:id="@+id/Basic_Info">
  
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
              android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
          android:id="@+id/textView1"
          android:layout_column="0"
          android:text="@string/textView1"
           android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
          >
        </TextView>

        <TextView
          android:id="@+id/textView2"
                     android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
            >
        </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
          <TextView
          android:id="@+id/textView3"
          android:layout_column="0"
        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
           
           >
        </TextView>

   
     <ImageView
         android:id="@+id/login1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:src="@drawable/login_button"
         />"
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <TextView
          android:id="@+id/textView5"
          android:layout_column="0"
          android:text="@string/textView5"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView6"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tablrowforyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
              >
          <TextView
          android:id="@+id/yearbuilt"
          android:layout_column="0"
          android:text="Year Built"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/yearBuilt"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <TextView
          android:id="@+id/textView7"
          android:layout_column="0"
          android:text="@string/textView7"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView8"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
          <TextView
          android:id="@+id/textView9"
          android:layout_column="0"
          android:text="@string/textView9"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView10"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <TextView
          android:id="@+id/textView11"
          android:layout_column="0"
          android:text="@string/textView11"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView12"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
           >
          <TextView
          android:id="@+id/textView13"
          android:layout_column="0"
          android:text="@string/textView13"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView14"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <TextView
          android:id="@+id/textView15"
          android:layout_column="0"
          android:text="@string/textView15"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView16"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
           >
          <TextView
          android:id="@+id/textView17"
          android:layout_column="0"
          android:text="@string/textView17"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
          android:id="@+id/textView18"
                    android:layout_column="1"  android:gravity="right">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:maxLines="3"
                 android:text="@string/textView19" />

        <TextView
          android:id="@+id/textView20"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
          <TextView
          android:id="@+id/textView21"
          android:layout_column="0"
          android:text="@string/textView21"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView22"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
           <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <TextView
          android:id="@+id/textView23"
          android:layout_column="0"
          android:text="@string/textView23"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView24"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
           <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
           >
          <TextView
          android:id="@+id/textView25"
          android:layout_column="0"
          android:text="@string/textView25"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
          >
        </TextView>
            <ImageView
                android:id="@+id/imageView1"
                    android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/abc_ab_share_pack_holo_dark" />
          
        <TextView
          android:id="@+id/textView26"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
           <TableRow
            android:id="@+id/tableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <TextView
          android:id="@+id/textView27"
          android:layout_column="0"
          android:text="@string/textView27"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
          android:id="@+id/textView28"
                    android:layout_column="1"  android:gravity="right"
                    android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
           >
          <TextView
          android:id="@+id/textView29"
          android:layout_column="0"
          android:text="@string/textView29"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
          android:id="@+id/textView30"
                    android:layout_column="1"  android:gravity="right">
        </TextView>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <TextView
          android:id="@+id/textView31"
          android:layout_column="0"
          android:text="@string/textView31"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:maxLines="3">
        </TextView>
            <ImageView
                android:id="@+id/imageView2"
                    android:layout_width="15dp"
                android:layout_height="15dp"
      
        android:gravity="right"
                 />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
          android:id="@+id/textView32"
                    android:layout_column="1"  android:gravity="right">
        </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow173"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



          <TextView
              android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
          android:id="@+id/textView33"
          android:layout_column="0"
          android:text="@string/textView33">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
          android:id="@+id/textView34"
                    android:layout_column="1"  android:gravity="right">
        </TextView>
        </TableRow>
                <TableRow
            android:id="@+id/tableRow174"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
          <TableRow
            android:id="@+id/tableRow175"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
        
            <TableRow
            android:id="@+id/tableRow176"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
        
              <TableRow
            android:id="@+id/tableRow177"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
        
                <TableRow
            android:id="@+id/tableRow178"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
        
                  <TableRow
            android:id="@+id/tableRow179"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
        
    </TableLayout>

</ScrollView>

  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
      android:text="\u00AE Zillow, Inc., 2006-2014. Use is subject to "
      
       />

  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
    
         android:id="@+id/ZillowDisclaimer"
   
       />


  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
    
         android:id="@+id/what"
   
       />
  
   </LinearLayout> 
